feat(eslint): add initial configurations

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Ignore these directories
 ###############################################################################
 
+dist/
 node_modules/
 
 ###############################################################################
@@ -15,6 +16,7 @@ node_modules/
 ###############################################################################
 
 !.editorconfig
+!.eslintrc.js
 !.gitignore
 !.nvmrc
 !.prettierrc
