--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "license": "ISC",
   "main": "index.ts",
   "scripts": {
+    "dev": "tsx ./src/main.ts",
     "lint": "eslint --ext .ts src/ --fix"
   },
+  "dependencies": {
+    "express": "4.18.2"
+  },
   "devDependencies": {
+    "@types/express": "4.17.17",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
     "eslint": "8.33.0",
+    "tsx": "3.12.7",
     "typescript": "4.9.4"
   }
 }
