--- a/package.json
+++ b/package.json
@@ -7,17 +7,26 @@
   "main": "index.ts",
   "scripts": {
     "dev": "tsx ./src/main.ts",
-    "lint": "eslint --ext .ts src/ --fix"
+    "lint": "eslint --ext .ts src/ --fix",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "cors": "^2.8.5",
+    "express": "4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "4.17.17",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
+    "@vitest/coverage-c8": "^0.31.0",
     "eslint": "8.33.0",
+    "supertest": "^6.3.3",
     "tsx": "3.12.7",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "vitest": "^0.31.0"
   }
 }
