--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es2016",
+    "target": "ESNext",
     "module": "commonjs",
     "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@/controller/*": ["./src/infra/controller/*"],
+      "@/http/*": ["./src/infra/http/*"],
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src", "types"]
 }
