--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Ignore these directories
 ###############################################################################
 
+coverage/
 dist/
 node_modules/
 
