feat(auth): add initial domain email and passwor VO and auth Domain Service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strict": true,
     "skipLibCheck": true,
     "paths": {
+      "@/entities/*": ["./src/domain/entities/*"],
       "@/controller/*": ["./src/infra/controller/*"],
       "@/http/*": ["./src/infra/http/*"],
       "@/*": ["./src/*"]
