--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "dev": "tsx ./src/main.ts",
     "lint": "eslint --ext .ts src/ --fix",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "dtw": "docker compose -f docker-compose.test.yaml run api yarn jest --testMatch '/**/*.test.e2e.ts' --watchAll --detectOpenHandles",
+    "dtc": "docker compose -f docker-compose.test.yaml run api yarn jest --testMatch '**/?(*.)+(test|test.e2e).ts' --coverage --detectOpenHandles --forceExit",
+    "test": "jest",
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -21,15 +22,16 @@
     "@faker-js/faker": "7.6.0",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
+    "@types/jest": "29.4.0",
     "@types/jsonwebtoken": "9.0.2",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
-    "@vitest/coverage-c8": "0.31.0",
     "eslint": "8.33.0",
+    "jest": "29.4.1",
     "supertest": "6.3.3",
-    "tsx": "3.12.7",
-    "typescript": "4.9.4",
-    "vitest": "0.31.0"
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
   }
 }
