feat(database): add initial setup

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@
 coverage/
 dist/
 node_modules/
+postgres/
 
 ###############################################################################
 # Ignore these files
 ###############################################################################
 
 .*
+*.log
 
 ###############################################################################
 # Accept these files
