--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "http-status-codes": "2.2.0",
-    "jsonwebtoken": "9.0.0"
+    "jsonwebtoken": "9.0.0",
+    "knex": "2.4.2",
+    "pg": "8.9.0",
+    "snake-camel": "1.0.8",
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
