--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "2.4.2",
     "pg": "8.9.0",
     "snake-camel": "1.0.8",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
