--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "version": "1.0.0",
   "author": "Adroaldo de Andrade <adroaldof@gmail.com>",
   "license": "ISC",
-  "main": "index.ts",
+  "main": "src/main-rest-api.ts",
   "scripts": {
-    "dev": "tsx ./src/main.ts",
-    "lint": "eslint --ext .ts src/ --fix",
+    "build": "tsc",
+    "start": "ts-node-dev --respawn -r tsconfig-paths/register ./src/main-rest-api.ts",
+    "dev": "docker compose up",
     "dtw": "docker compose -f docker-compose.test.yaml run api yarn jest --testMatch '/**/*.test.e2e.ts' --watchAll --detectOpenHandles",
     "dtc": "docker compose -f docker-compose.test.yaml run api yarn jest --testMatch '**/?(*.)+(test|test.e2e).ts' --coverage --detectOpenHandles --forceExit",
+    "dsa": "docker container stop $(docker container list -q) || true && docker rm $(docker container list -aq) || true",
     "test": "jest",
+    "test-integration": "jest --testMatch '/**/*.test.e2e.ts' --detectOpenHandles --forceExit",
+    "test-coverage": "jest --testMatch '**/?(*.)+(test|test.e2e).ts' --coverage --detectOpenHandles --forceExit",
+    "test-watch": "jest --watchAll",
+    "coverage": "jest --coverage",
+    "coverage-watch": "jest --coverage --watchAll",
+    "make-migration": "knex migrate:make --knexfile ./src/infra/database/knexfile.ts",
+    "run-migrations": "knex migrate:latest --knexfile ./src/infra/database/knexfile.ts",
+    "rollback-migrations": "knex migrate:rollback --knexfile ./src/infra/database/knexfile.ts",
+    "make-seed": "knex seed:make --knexfile ./src/infra/database/knexfile.ts",
+    "run-seed": "knex seed:run --knexfile ./src/infra/database/knexfile.ts",
+    "lint": "eslint --ext .ts src/ --fix"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -37,5 +50,7 @@
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "4.9.4"
   }
 }
