--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,24 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ESNext",
-    "module": "commonjs",
+    "module": "CommonJS",
     "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "allowJs": true,
     "paths": {
       "@/ports/*": ["./src/application/ports/*"],
       "@/use-cases/*": ["./src/application/use-cases/*"],
       "@/entities/*": ["./src/domain/entities/*"],
-      "@/controller/*": ["./src/infra/controller/*"],
+      "@/controllers/*": ["./src/infra/controllers/*"],
+      "@/database/*": ["./src/infra/database/*"],
       "@/http/*": ["./src/infra/http/*"],
+      "@/repositories/*": ["./src/infra/repositories/*"],
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "types"]
+  "include": ["src", "types"],
+  "exclude": ["node_modules"]
 }
