feat(project): update yarn to the version 2

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ postgres/
 !.nvmrc
 !.prettierrc
 !.vscode
+!.yarnrc.yml
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
