--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "dsa": "docker container stop $(docker container list -q) || true && docker rm $(docker container list -aq) || true",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "make-migration": "knex migrate:make --knexfile ./src/infra/database/knexfile.ts",
-    "run-migrations": "knex migrate:latest --knexfile ./src/infra/database/knexfile.ts",
-    "rollback-migrations": "knex migrate:rollback --knexfile ./src/infra/database/knexfile.ts",
-    "make-seed": "knex seed:make --knexfile ./src/infra/database/knexfile.ts",
-    "run-seed": "knex seed:run --knexfile ./src/infra/database/knexfile.ts",
+    "make-migration": "node --experimental-modules ./node_modules/.bin/knex migrate:make --knexfile ./src/infra/database/knexfile.mjs",
+    "run-migrations": "node --experimental-modules ./node_modules/.bin/knex migrate:latest --knexfile ./src/infra/database/knexfile.ts",
+    "rollback-migrations": "node --experimental-modules ./node_modules/.bin/knex migrate:rollback --knexfile ./src/infra/database/knexfile.ts",
+    "make-seed": "node --experimental-modules ./node_modules/.bin/knex seed:make --knexfile ./src/infra/database/knexfile.ts",
+    "run-seed": "node --experimental-modules ./node_modules/.bin/knex seed:run --knexfile ./src/infra/database/knexfile.ts",
     "lint": "eslint --ext .ts src/ --fix"
   },
   "dependencies": {
