--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "9.0.0",
     "knex": "2.4.2",
     "pg": "8.9.0",
     "snake-camel": "1.0.8",
-    "zod": "^3.21.4"
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
@@ -42,13 +42,13 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/coverage-c8": "0.31.0",
     "eslint": "8.33.0",
     "supertest": "6.3.3",
     "ts-node-dev": "2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^3.12.7",
+    "tsconfig-paths": "4.2.0",
+    "tsx": "3.12.7",
     "typescript": "4.9.4",
-    "vitest": "^0.31.0"
+    "vitest": "0.31.0"
   }
 }
