feat(database): adjust database files to .mts and ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ESNext",
-    "module": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "isolatedModules": true,
     "esModuleInterop": true,
