--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "@/ports/*": ["./src/application/ports/*"],
       "@/use-cases/*": ["./src/application/use-cases/*"],
+      "@/decorators/*": ["./src/application/decorators/*"],
       "@/entities/*": ["./src/domain/entities/*"],
       "@/controllers/*": ["./src/infra/controllers/*"],
       "@/database/*": ["./src/infra/database/*"],
