--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "knex": "2.4.2",
     "pg": "8.9.0",
     "snake-camel": "1.0.8",
+    "winston": "^3.9.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
