--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "9.0.0",
     "knex": "2.4.2",
+    "morgan": "^1.10.0",
     "pg": "8.9.0",
     "snake-camel": "1.0.8",
     "winston": "^3.9.0",
@@ -40,6 +41,7 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/jsonwebtoken": "9.0.2",
+    "@types/morgan": "^1.9.4",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
