fix(file-name): fix package json scripts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "tsc",
     "start": "tsx --watch ./src/main-rest-api.ts",
     "dev": "docker compose up",
-    "dtw": "docker compose -f docker-compose.test.yaml run api yarn test",
-    "dtc": "docker compose -f docker-compose.test.yaml run api yarn coverage",
+    "dtw": "docker compose -f docker-compose.test.yml run api yarn test",
+    "dtc": "docker compose -f docker-compose.test.yml run api yarn coverage",
     "dsa": "docker container stop $(docker container list -q) || true && docker rm $(docker container list -aq) || true",
     "test": "vitest",
     "coverage": "vitest run --coverage",
