--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dtw": "docker compose -f docker-compose.test.yml run api yarn test",
     "dtc": "docker compose -f docker-compose.test.yml run api yarn coverage",
     "dsa": "docker container stop $(docker container list -q) || true && docker rm $(docker container list -aq) || true",
-    "test": "vitest",
+    "test": "NODE_ENV=unit vitest ./src/{application,domain}/**/*.{test,spec}.?(c|m)[jt]s?(x)",
     "coverage": "vitest run --coverage",
     "make-migration": "tsx ./node_modules/.bin/knex migrate:make --knexfile ./src/infra/database/knexfile.mjs",
     "run-migrations": "tsx ./node_modules/.bin/knex migrate:latest --knexfile ./src/infra/database/knexfile.mjs",
@@ -30,10 +30,10 @@
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "9.0.0",
     "knex": "2.4.2",
-    "morgan": "^1.10.0",
+    "morgan": "1.10.0",
     "pg": "8.9.0",
     "snake-camel": "1.0.8",
-    "winston": "^3.9.0",
+    "winston": "3.9.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -41,11 +41,12 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/jsonwebtoken": "9.0.2",
-    "@types/morgan": "^1.9.4",
+    "@types/morgan": "1.9.4",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
     "@vitest/coverage-c8": "0.31.0",
+    "@vitest/coverage-v8": "0.34.1",
     "eslint": "8.33.0",
     "supertest": "6.3.3",
     "tsconfig-paths": "4.2.0",
