--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "build": "tsc",
     "start": "tsx --watch ./src/main-rest-api.ts",
     "dev": "docker compose up",
-    "dtw": "docker compose -f docker-compose.test.yml run api yarn test",
-    "dtc": "docker compose -f docker-compose.test.yml run api yarn coverage",
+    "dtw": "docker compose -f docker-compose.test.yml run api yarn vitest --dir ./src/infra",
+    "dtc": "docker compose -f docker-compose.test.yml run api yarn coverage --dir ./src",
     "dsa": "docker container stop $(docker container list -q) || true && docker rm $(docker container list -aq) || true",
-    "test": "NODE_ENV=unit vitest ./src/{application,domain}/**/*.{test,spec}.?(c|m)[jt]s?(x)",
+    "test": "vitest ./src/{application,domain}/**/*.{test,spec}.?(c|m)[jt]s?(x)",
     "coverage": "vitest run --coverage",
     "make-migration": "tsx ./node_modules/.bin/knex migrate:make --knexfile ./src/infra/database/knexfile.mjs",
     "run-migrations": "tsx ./node_modules/.bin/knex migrate:latest --knexfile ./src/infra/database/knexfile.mjs",
@@ -45,13 +45,12 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
-    "@vitest/coverage-c8": "0.31.0",
     "@vitest/coverage-v8": "0.34.1",
     "eslint": "8.33.0",
     "supertest": "6.3.3",
     "tsconfig-paths": "4.2.0",
     "tsx": "3.12.7",
     "typescript": "4.9.4",
-    "vitest": "0.31.0"
+    "vitest": "0.34.1"
   }
 }
